Add CORS + minor edits.
